--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -27,3 +27,14 @@ html {
   font-size: 10rem;
   flex-flow: column;
 }
+
+@media screen and (max-width: 600px) {
+  .discounts{
+    visibility: hidden;
+    clear: both;
+    float: left;
+    margin: 10px auto 5px 20px;
+    width: 28%;
+    display: none;
+  }
+}
