--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -28,13 +28,14 @@ html {
   flex-flow: column;
 }
 
-@media screen and (max-width: 600px) {
-  .discounts{
-    visibility: hidden;
-    clear: both;
-    float: left;
-    margin: 10px auto 5px 20px;
-    width: 28%;
+@media (max-width: 600px) {
+  .discounts {
+    display: block;
+  }
+}
+
+@media (min-width: 601px) {
+  .discounts {
     display: none;
   }
 }
